hphp/hack/test/typecheck/explicit_type_collection/explicit_type_collection_passing_keyset1.php.like_types.exp
File "explicit_type_collection_passing_keyset1.php", line 6, characters 3-13:
  keyset<arraykey>
File "explicit_type_collection_passing_keyset1.php", line 7, characters 7-8:
Invalid argument (Typing[4110])
File "explicit_type_collection_passing_keyset1.php", line 3, characters 14-24:
Expected ~keyset<int> because it is an unenforceable type
File "explicit_type_collection_passing_keyset1.php", line 5, characters 8-25:
But got keyset<arraykey>
