hphp/hack/test/typecheck/explicit_type_collection/explicit_type_collection_passing_keyset1.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.
function foo(keyset<int> $x): void {}
function bar(): void {
  $x = keyset<arraykey>[];
  hh_show($x);
  foo($x);
}
